test(integration): make proper payload for POST /consents
