# src/server/handlers/consents.ts
@@ -43,11 +43,11 @@ export async function post (
   _context: Context,
   request: Request,
   h: ResponseToolkit): Promise<ResponseObject> {
-  const payload: tpAPI.Schemas.ConsentsPostRequest = request.payload as tpAPI.Schemas.ConsentsPostRequest
-  const consentId = payload.consentId
+  // TOOD: validate which case we have here: PISP or AUTH - maybe change api definitions...
+  const payload: tpAPI.Schemas.ConsentsPostRequestAUTH = request.payload as tpAPI.Schemas.ConsentsPostRequestAUTH
+  const { consentId /*, credential */ } = payload
   const initiatorId = request.headers[Enum.Http.Headers.FSPIOP.SOURCE]
   const participantId = request.headers[Enum.Http.Headers.FSPIOP.DESTINATION]
-
   // Asynchronously deals with creation and storing of consents and scope
   setImmediate(async (): Promise<void> => {
     try {
@@ -56,6 +56,7 @@ export async function post (
         initiatorId,
         participantId,
         payload.scopes
+        // TODO: payload.credential validation
       )
     } catch (error) {
       logger.push(error).error('Error: Unable to create/store consent')
